# GmailAddons

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  env.example.txt  pyproject.toml
src/gmail_categorizer/: __init__.py  cli.py  config.py  gmail_client.py  gpt_categorizer.py  logging_config.py  models.py  processor.py
tests/: __init__.py  test_config.py  test_models.py
